examples/anthos-service-mesh/productpage-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: productpage-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productpage-vs
  namespace: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - productpage-gateway
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
   # fault injection
    fault:
      abort:
        percentage:
          value: 20
        httpStatus: 401
#      delay:
#        percentage:
#          value: 50
#        fixedDelay: 5s
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage-dr
  namespace: bookinfo
spec:
  host: productpage
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      tcp:
        maxConnections: 2
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 1
        maxRequestsPerConnection: 1 
    # circuit breaking
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 3s
      baseEjectionTime: 30s
